Fixed breadcrumbs on mobile

--- a/wp-content/themes/knight_wallace/assets/scss/_knight_wallace.scss
+++ b/wp-content/themes/knight_wallace/assets/scss/_knight_wallace.scss
@@ -745,15 +745,19 @@ figure {
   font-size: 1.8rem;
   color: $lblue;
   display: inline-block;
+
+  @include responsive("640px") {
+    font-size: 1.4rem;
+  }
 }
 
 .breadcrumb p {
   text-transform: uppercase;
 
   @include responsive("640px") {
-    &.share-wrap {
-      //            display: none;
+    font-size: 1.4rem;
 
+    &.share-wrap {
       a {
         margin-left: 0;
       }
@@ -772,6 +776,11 @@ figure {
 
   i {
     font-size: 2.5rem;
+
+    @include responsive("640px") {
+      font-size: 1.7rem;
+      margin-left: 1rem;
+    }
   }
 }
 
